--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.phamminhdao.oil_tracker">
    <application
-        android:label="oil_tracker"
+        android:label="Oil Tracker"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
